--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
 	"parity-path",
 	"plain_hasher",
 	"rlp",
+    "rlp-breaking-change",
 	"transaction-pool",
 	"trace-time",
 	"triehash",
